# OmniGuard

./: .gitignore  .pre-commit-config.yaml  HACKATHON_WRITEUP.md  QUICKSTART.md  README.md  README_STREAMLIT.md  config.py  example_agent_usage.py  finetuning.ipynb  generate_annotation.py  image-generation.py  main.py  pyproject.toml  requirements-dev.txt  run_all.sh  run_backend.sh  run_frontend.sh  streamlit_app.py
.claude/: settings.local.json
agent/: safety_agents.py
agent/src/: README.md  __init__.py  agent.py  context.py  exceptions.py  logger.py  runner.py  tools.py  types.py
agent/tools/: __init__.py  compliance_tools.py  emergency_tools.py  ems_tools.py  fire_tools.py  notification_tools.py
api/: .gitignore  README.md  main.py
data_transforms/: organize_dataset.py  safety_prompts.py  video_dataset_generator.py  video_transcription.py
dataset/: safety_prompts.py  test.jsonl  train.jsonl  video_dataset_generator.py
dataset/annotations/: 20251024_231728_4d32b541_video_68fc4dc296dc81919cf608d921c022c10c1147a9f503ce53.json  20251024_231738_36a24421_video_68fc4dc226e48190946030a45e32e5fc0bd8a90f33730b86.json  20251024_232424_e4c06e0a_video_68fc4f5fe8c481919801e2b518020c5d0fbac59395773c9b.json  20251024_232431_6ee26858_video_68fc4f6818908198919f499a29dd7aa9013f962e80b240ca.json  20251024_233127_5c1fdf59_video_68fc50fc80e0819181742d9c6467830e08b376f97f7123b6.json  20251025_161635_5a96e2db_video_68fd3c9fcd9c819099fe012953d8720f0520f6f4f2523af8.json  (+18 more)
domain/: event.py
frontend/: README.md  index.html  package-lock.json  package.json
pipeline/: pipeline.py
(+41 files in other folders)
