[project]
name = "safety-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.120.0",
    "google-genai>=0.1.0",
    "openai>=2.6.1",
    "openai-agents>=0.4.2",
    "pre-commit>=4.3.0",
    "pydantic>=2.0.0",
    "ruff>=0.14.2",
    "streamlit>=1.50.0",
]

[tool.ruff]
# Set the maximum line length to 100
line-length = 100

# Assume Python 3.11
target-version = "py311"

# Enable auto-fixing
fix = true

[tool.ruff.lint]
# Enable specific rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]

# Ignore specific rules
ignore = [
    "E501",   # Line too long (handled by line-length)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["safety-agent"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Use Unix line endings
line-ending = "lf"
